# project-G

./: CMakeLists.txt
shaders/: default.vert  incolor.frag  light.frag  light.vert  light_source.frag  shift.vert  texture.frag  texture.vert  uniform_color.frag
src/: main.cpp  ogl_lighting.cpp  shader.h  texture.h
src/geometry/: math_vector.h
tests/: CMakeLists.txt  main_test.cpp
